...
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/ic_baseline_folder_24"
                />

            <LinearLayout
                android:id="@+id/folderNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/iconImageView"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/nameFolderView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="2dp"
                    android:ellipsize="end"
                    android:maxLength="50"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/deleteFolder"
                        android:layout_width="92dp"
                        android:layout_height="40dp"
                        android:text="@string/borrarCarpeta"
                        android:textSize="13sp"
                        android:textColor="#e00000"
                        android:textStyle="bold"
...
